--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "license": "MIT",
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.66.6",
     "@types/google.maps": "^3.55.7",
     "@types/leaflet": "^1.9.19",
     "axios": "^1.7.9",
     "framer-motion": "^11.0.17",
-    "google-maps-react": "^2.0.6",
     "leaflet": "^1.9.4",
     "next": "^14.2.3",
     "react": "^18.3.1",
