--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.9",
     "framer-motion": "^11.0.17",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.523.0",
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
