--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.50.0",
     "react-icons": "^5.2.1",
+    "sonner": "^2.0.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
