--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,29 +9,9 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=development
-      - MONGODB_URI=mongodb://mongodb:27017/micall
-      - REDIS_HOST=redis
     volumes:
       - .:/app
       - /app/node_modules
-    depends_on:
-      - mongodb
-      - redis
-
-  mongodb:
-    image: mongo:6
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongodb_data:/data/db
-
-  redis:
-    image: redis:7-alpine
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
 
 volumes:
-  mongodb_data:
-  redis_data: 
+# No backend volumes needed 
