--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.50.0",
     "react-icons": "^5.2.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@jest/types": "^30.0.1",
+    "@types/google.maps": "^3.55.7",
+    "@types/leaflet": "^1.9.19",
     "@types/node": "^20.11.24",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
