--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.39.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
@@ -22,9 +23,12 @@
     "@types/google.maps": "^3.55.7",
     "@types/leaflet": "^1.9.19",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.0.17",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.523.0",
+    "motion": "^12.23.26",
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -32,6 +36,8 @@
     "react-icons": "^5.2.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.5",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
