--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "lucide-react": "^0.523.0",
     "motion": "^12.23.26",
     "next": "^14.2.30",
+    "next-auth": "^4.24.13",
+    "next-pwa": "^5.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.50.0",
