🎯 Fix locked phone emergency access - opens full homepage
UPDATED BEHAVIOR:
- ✅ Volume Up on locked phone → Opens homepage with ALL emergency features
  * Emergency alert creation
  * SOS button access
  * Go Live feature
  * Full responder tracking

- ✅ Shake on locked phone → Opens homepage with ALL emergency features
  * Same full access as Volume Up

- ✅ Power Button (native) → Opens homepage with ALL emergency features
  * Short press: Opens emergency mode
  * Long press: Opens emergency mode

- ✅ Emergency Profile accessible via overlay/modal on homepage
  * Blood type display
  * Medical conditions
  * Allergies
  * Emergency contacts
  * Insurance info

FIXED:
- Removed exclusive Emergency Unlock Screen
- Now navigates to full homepage with emergency features
- All features accessible (not just profile viewing)
- Emergency profile shown as overlay on homepage

BUILD: ✓ Compiled successfully
All 24+ pages pre-rendering correctly

--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "@capacitor/app": "^8.0.0",
+    "@capacitor/cli": "^6.2.1",
+    "@capacitor/core": "^8.0.2",
+    "@capacitor/motion": "^8.0.0",
+    "@capacitor/screen-reader": "^8.0.0",
     "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.39.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
