--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@jest/types": "^30.0.1",
     "@types/google.maps": "^3.55.7",
+    "@types/jest": "^30.0.0",
     "@types/leaflet": "^1.9.19",
     "@types/node": "^20.11.24",
     "@types/react": "^18.3.18",
@@ -59,8 +60,10 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.30",
+    "jest": "^30.2.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
   "engines": {
